--- a/src/app/sections/home/home.html
+++ b/src/app/sections/home/home.html
@@ -4,7 +4,7 @@
 			<input type="email" ng-model="loginModel.email" placeholder="email">
 			<input type="text" ng-model="loginModel.email" placeholder="name">
 			<input type="date" ng-model="loginModel.email">
-			<button type="submit"> login</button>
+			<button type="submit"> stuur coupon naar e-mail</button>
 		</form>
 	</div>
 </section>
