--- a/src/app/sections/login/login.html
+++ b/src/app/sections/login/login.html
@@ -1,6 +1,3 @@
-<section id="home">
-	<div class="row medium-6">
-
 		<section id="home">
 			<div class="row medium-6">
 				<form name="registerForm" class="column small-8 small-offset-2 medium-12 medium-offset-0" ng-submit="registerForm.$valid && loginCtrl.sign(user)" novalidate>
@@ -14,7 +11,7 @@
 					</div>
 					<div class="Passport test">
 						<label for="password" class="placeholderLabel">password </label>
-						<input type="password" id="dateMaskInput" name="password" ng-model='user.password'>
+						<input type="password" id="dateMaskInput" name="password" ng-model="user.password">
 					</div>
 					<button type="submit" id="submit" name="submit" class="" ng-click="save()">Let's start</button>
 				</form>
