started design of pages

--- a/src/app/scss/_colors.scss
+++ b/src/app/scss/_colors.scss
@@ -8,7 +8,10 @@ $colors: (
 	"Orange": #e86d02,
 	"Yellow": #ff961e,
   "Pink": #ea4c89,
-  "Purple": #8b008b
+  "Purple": #8b008b,
+	"main": #D70778,
+	"second": #1D1F16,
+	"snow": #F5F5F5
 );
 // Variables
 $dark: color(Black); $light: color(White); $black: color(Black); $white: color(White);
