--- a/src/app/index.html
+++ b/src/app/index.html
@@ -7,6 +7,23 @@
 	<title>
 		qookies generator
 	</title>
+	<link rel="apple-touch-icon" sizes="57x57" href="img/favIcon/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="img/favIcon/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="img/favIcon/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/favIcon/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="img/favIcon/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/favIcon/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="img/favIcon/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/favIcon/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favIcon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="img/favIcon/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favIcon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="img/favIcon/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favIcon/favicon-16x16.png">
+	<link rel="manifest" href="img/favIcon/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="css/app.css">
@@ -15,7 +32,6 @@
 		var Browser = {
 			isIE: false
 		};
-
 	</script>
 	<!-- By default we will assume that the browser is not IE -->
 	<!--[if IE 5]><script>Browser = {isIE:true,version:5};</script><![endif]-->
@@ -44,20 +60,17 @@
 			a.src = g;
 			m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-
 	</script>
 
 	<!-- build:remove dist,staging -->
 	<script>
 		ga('create', 'UA-XXXXXXXX-X', 'none');
-
 	</script>
 	<!-- /build -->
 
 	<!-- build:remove dev -->
 	<script>
 		ga('create', 'UA-XXXXXXXX-X', 'auto');
-
 	</script>
 	<!-- /build -->
 
