--- a/src/app/scss/_typography.scss
+++ b/src/app/scss/_typography.scss
@@ -88,3 +88,7 @@ p{
 		& + button{ margin-top: 2rem; }
 	}
 }
+
+button { color: white;  cursor: pointer; padding: 15px; background: color(main); border-radius: 20px; margin-top: 10px; transition: all 300ms;
+	&:hover { background: snow; color: black; }
+}
