--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -17,7 +17,7 @@
 
 
 body{
-	background-color: fuchsia;
+	background-color: color(second);
   table {
     @extend %table;
     thead { font-weight: bold; }
@@ -29,4 +29,18 @@ body{
       input[type=checkbox]:checked {
       background-color: green; border-radius: 5px;
     }
+}
+
+#home {
+
+  form { margin-top: 30px; width: 100%;
+    input { height: 40px; border: none; width: 100%; display: block; padding: 10px; margin-bottom: 10px; border-radius: 10px; transition: all 300ms;}
+    .ng-invalid { color: color(Red); transition: all 300ms;}
+    .ng-valid-email { background: color(Green); color: white; transition: all 300ms;}
+    .ng-empty {
+      &.ng-valid-email { background: white; color: black; }
+      &.ng-invalid { color: black; }
+    }
+  }
+
 }
