finished style of couponpage

--- a/src/app/sections/home/home.html
+++ b/src/app/sections/home/home.html
@@ -15,5 +15,19 @@
 			<input type="date" ng-model="loginModel.birthday" required>
 			<button type="submit" id="submit" name="submit" class="" ng-click="save()" required>send coupon to email</button>
 		</form>
+
+		<div class="footer-social-icons ">
+			<ul>
+				<li>
+					<a href="https://www.instagram.com/qookies.nl/?hl=nl" class="social-icon"> <i class="fa fa-instagram"></i></a>
+				</li>
+				<li>
+					<a href="https://www.facebook.com/qookiesnl/?fref=ts" class="social-icon"> <i class="fa fa-facebook"></i></a>
+				</li>
+				<li>
+					<a href="https://www.snapchat.com/add/qookies.nl" class="social-icon"> <i class="fa fa-snapchat"></i></a>
+				</li>
+			</ul>
+		</div>
 	</div>
 </section>
