--- a/src/app/scss/_typography.scss
+++ b/src/app/scss/_typography.scss
@@ -89,6 +89,6 @@ p{
 	}
 }
 
-button { color: white;  cursor: pointer; padding: 15px; background: color(main); border-radius: 20px; margin-top: 10px; transition: all 300ms;
+button { color: white;  cursor: pointer; padding: 15px; background: color(main); border-radius: 20px; margin-top: 10px; transition: all 300ms; margin-bottom: 15px;
 	&:hover { background: snow; color: black; }
 }
