--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -1,3 +1,5 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
+
 // foundation
 @import
   "zurb/global",
@@ -32,7 +34,7 @@ body{
 }
 
 #home {
-  .logo { background: url('../img/Round-logo.svg')}
+  .logo { background: url('../img/Round-logo.svg'); height: 190px; background-repeat: no-repeat; background-size: contain; background-position: center center; margin-top: 40px; margin-bottom: 20px; }
   h3, p { text-align: center; color: white;}
   form { margin-top: 30px; width: 100%;
     input { height: 40px; border: none; width: 100%; display: block; padding: 10px; margin-bottom: 10px; border-radius: 10px; transition: all 300ms;}
@@ -46,5 +48,22 @@ body{
       &.ng-invalid { color: black; }
     }
   }
+  .footer-social-icons { width: 100%; color: color(main); transition: all 300ms ease;
+    ul { list-style-type: none; margin-left: 0; padding-left: 0; margin: 0 auto;
+      li { margin: 5px 4%; display: inline-block; margin-bottom: 20px;
+        @media #{$small-only}{ font-size: 1.8em;}
+      }
+    }
+  }
+  .fa { transition: all 300ms ease; }
+  .fa-facebook:hover {
+    color: #3d5b99;
+  }
 
+  .fa-snapchat:hover {
+    color: #fffc00;
+  }
+  .fa-instagram:hover {
+    color: #e95950;
+  }
 }
