--- a/src/app/sections/login/login.html
+++ b/src/app/sections/login/login.html
@@ -1,5 +1,5 @@
-<section id="home">
-	<div class="row medium-6">
+<section id="login">
+	<div class="row medium-4 small-8 large-2">
 		<form name="registerForm" class="column small-8 small-offset-2 medium-12 medium-offset-0" ng-submit="registerForm.$valid && loginCtrl.sign(user)" novalidate>
 			<div class="name test column">
 				<label for="name" class="placeholderLabel">Your name</label>
