--- a/src/app/scss/app.scss
+++ b/src/app/scss/app.scss
@@ -18,8 +18,8 @@
   "slick";
 
 
-body{
-	background-color: color(second);
+body {
+	background-color: color(second)!important;
   table {
     @extend %table;
     thead { font-weight: bold; }
@@ -33,7 +33,15 @@ body{
     }
 }
 
-#home {
+#pcode { margin-top: 50px;  color: white; text-align: center!important;
+  .footer-social-icons { text-align: center; margin-top: 10px;
+    ul { text-align: center; }
+   }
+   h1, h2, h5 { margin-bottom: 20px; text-align: center; }
+   span { color: color(main); }
+ }
+
+#home, #login, #pcode {
   .logo { background: url('../img/Round-logo.svg'); height: 190px; background-repeat: no-repeat; background-size: contain; background-position: center center; margin-top: 40px; margin-bottom: 20px; }
   h3, p { text-align: center; color: white;}
   form { margin-top: 30px; width: 100%;
