--- a/src/app/sections/pcode/pcode.html
+++ b/src/app/sections/pcode/pcode.html
@@ -1,7 +1,27 @@
 <section id="pcode">
-	<div class="row medium-6">
-		<h1> Welcome {{ CouponUser.id }} </h1>
+	<div class="row medium-5 small-10 large-4">
+		<div class="column small-12 logo"></div>
+		<div class="column medium-12">
+			<h1> gefeliciteerd <span>{{ couponUser.id }}</span> </h1>
+		</div>
 		<br>
-		<h2> Your Personal code {{ CouponUser.name }} </h2>
-	</div>
+		<h2> Your Personal code <span>{{ couponUser.name }}</span> </h2>
+		<h3>U kunt met deze persoonlijke code het actie innen aan de balie<br> geniet ervan</h3>
+		</div>
+		<div class="row medium-4 small-8 large-2">
+			<div class="footer-social-icons ">
+				<ul>
+					<li>
+						<a href="https://www.instagram.com/qookies.nl/?hl=nl" class="social-icon"> <i class="fa fa-instagram"></i></a>
+					</li>
+					<li>
+						<a href="https://www.facebook.com/qookiesnl/?fref=ts" class="social-icon"> <i class="fa fa-facebook"></i></a>
+					</li>
+					<li>
+						<a href="https://www.snapchat.com/add/qookies.nl" class="social-icon"> <i class="fa fa-snapchat"></i></a>
+					</li>
+				</ul>
+			</div>
+		</div>
+
 </section>
