--- a/src/app/sections/pcode/pcode.html
+++ b/src/app/sections/pcode/pcode.html
@@ -7,7 +7,7 @@
 		<br>
 		<div class="column medium-12">
 			<h2> Your Personal code <span>{{ couponUser.name }}</span> </h2>
-			<h3>U kunt met deze persoonlijke code het actie innen aan de balie<br> geniet ervan</h3>
+			<h3>U kunt met deze persoonlijke code het actie innen aan de balie<br> geniet ervan!</h3>
 		</div>
 	</div>
 	<div class="row medium-4 small-8 large-2">
