--- a/src/app/sections/home/home.html
+++ b/src/app/sections/home/home.html
@@ -16,6 +16,8 @@
 			<button type="submit" id="submit" name="submit" class="" ng-click="save()" required>send coupon to email</button>
 		</form>
 
+		<p>{{error}}</p>
+
 		<div class="footer-social-icons ">
 			<ul>
 				<li>
