--- a/src/app/sections/pcode/pcode.html
+++ b/src/app/sections/pcode/pcode.html
@@ -2,12 +2,12 @@
 	<div class="row medium-5 small-10 large-4">
 		<div class="column small-12 logo"></div>
 		<div class="column medium-12">
-			<h1> gefeliciteerd <span>{{ couponUser.id }}</span> </h1>
+			<h1> gefeliciteerd <span>{{ couponUser.objectId }}</span> </h1>
 		</div>
 		<br>
 		<div class="column medium-12">
-			<h2> Your Personal code <span>{{ couponUser.name }}</span> </h2>
-			<h3>U kunt met deze persoonlijke code het actie innen aan de balie<br> geniet ervan!</h3>
+			<h2> Your Personal code <span>{{ couponUser.username }}</span> </h2>
+			<h3>U kunt met deze persoonlijke code de actie innen aan de balie<br> geniet ervan!</h3>
 		</div>
 	</div>
 	<div class="row medium-4 small-8 large-2">
