--- a/src/app/sections/users/users.html
+++ b/src/app/sections/users/users.html
@@ -1,4 +1,4 @@
-<section id="users">
+<section id="users" class="users">
 	<div class="row large-8 medium-12 small-12">
 		<div class="column large-12 small-12">
 			<button type="submit" ng-click="usersCtrl.logout()"> logout</button>
